@@ -1,6 +1,9 @@
 * enhancements
   * Improve e-mail regexp (by github.com/rodrigoflores)
 
+* bug fix
+  * password_required? should not affect length validation
+
 == 1.3.3
 
 * bug fix
